# dbaide

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  package-lock.json  pyproject.toml  requirements-dev.txt  requirements-electron.txt  requirements-gui.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
dbaide/: __init__.py  app_info.py  cli.py  config.py  connection_identity.py  gui.py  i18n.py  llm.py  llm_errors.py  mcp_server.py  models.py  release_check.py  session.py  skill.py  ssl_certs.py  step_budget.py
dbaide/adapters/: __init__.py  base.py  mysql.py  postgres.py  sqlite.py
dbaide/agent/: __init__.py  agenda.py  answer_stream.py  answerer.py  assistant.py  chart_agent.py  clarify.py  controllers.py  dashboard_builder.py  dashboard_compiler.py  intent.py  join_evidence.py  join_inference.py  join_validation.py  llm_trace.py  loop.py  loop_prompts.py  loop_state.py  memory.py  multi.py  optimizer_agent.py  orchestrator.py  planner.py  progress_events.py  progressive_schema.py  router.py  run_state.py  runtime.py  schema_context.py  schema_link.py  schema_linker.py  sql_executions.py  sql_writer.py  toolkit.py  trace_model.py
dbaide/annotations/: __init__.py  store.py
dbaide/assets/: __init__.py  builder.py  diff.py  profiler.py  search.py  store.py  summarizer.py
dbaide/backup/: __init__.py  engine.py  registry.py  writers.py
dbaide/boards/: __init__.py  dates.py  grid.py  models.py  parametric.py  refresh.py  runtime.py  store.py
dbaide/charts/: __init__.py  data.py  echarts.py  embed.py  labels.py  layout.py  spec.py
dbaide/context/: __init__.py  catalog.py  disclosure.py
dbaide/core/: __init__.py  cancellation.py  errors.py  events.py  result.py  (+2 more)
docs/: BLOG.zh-CN.md  BUGS.md  DESIGN.md  PACKAGING.md  SHOWCASE.md  SHOWCASE.zh-CN.md  TEAM.md
electron/: package.json
scripts/: build_package.ps1  build_package.sh  codesign_macos.sh  smoke_test_macos.sh
tests/: conftest.py  llm_mock.py  test_agenda.py  test_agent_budget_config.py  test_agent_context_fixes.py  test_agent_loop.py  test_agent_steps.py  test_agent_stress.py  test_annotation_store.py  test_answer_compose.py  test_answer_export.py  test_answer_streaming.py  test_answerer.py  test_app_info.py  test_ask_user.py  test_asset_search.py  test_assets.py  test_assistant.py  test_audit_fixes.py  test_audit_fixes_round2.py  test_audit_fixes_round3.py  test_backup.py  test_batch_tools.py  test_boards.py  test_boards_service.py  test_bug_audit_fixes.py  test_build_load.py  test_build_trace_sql.py  test_catalog.py  test_catalog_diff.py  test_catalog_projection.py  test_chart_agent.py  test_chart_block.py  test_chart_embed.py  test_chart_labels.py  test_chart_provenance.py  test_chart_spec.py  test_chart_tools.py  test_clarify.py  test_clarify_loop.py  (+122 more)
tools/: download_vendor_assets.sh  make_demo_video.py  preview_answer_doc.py  probe_webengine_runtime.py  shoot.py  shoot_dialogs.py  shoot_docs.py  shoot_promo.py  shoot_social.py  verify_charts_ui.py
(+189 files in other folders)
