[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbaide"
version = "0.9.12"
description = "A lightweight CLI data assistant with progressive schema disclosure."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "DBAide"}]
dependencies = [
    "certifi>=2024.0.0",
    "pymysql>=1.1.0",
    "psycopg[binary]>=3.1.0",
]

[project.optional-dependencies]
gui = ["PyQt6==6.8.1", "PyQt6-WebEngine==6.8.0", "mistune>=3.0", "openpyxl>=3.1"]
imports = ["openpyxl>=3.1"]
dev = ["pytest>=8.0.0", "pyinstaller>=6.0.0", "build>=1.0.0", "mistune>=3.0", "openpyxl>=3.1"]
packaging = ["pyinstaller>=6.0.0", "build>=1.0.0"]

[project.scripts]
dbaide = "dbaide.cli:main"
dbaide-gui = "dbaide.gui:main"

[tool.setuptools.packages.find]
include = ["dbaide*"]

[tool.setuptools.package-data]
"dbaide.desktop" = ["assets/*.png", "assets/tool_icons/*.png", "assets/vendor/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["codex", ".*", "build", "dist", "node_modules"]
markers = [
    "webengine: opt out of the headless WebEngine stub and use real Qt WebEngine",
]
